--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="notes.simplemobiletools.com"
-          xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest
+    package="notes.simplemobiletools.com"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
         android:allowBackup="true"
