--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".activities.MainActivity"
-            android:screenOrientation="portrait">
+            android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -30,13 +29,11 @@
 
         <activity
             android:name=".activities.AboutActivity"
-            android:label="@string/about"
-            android:screenOrientation="portrait"/>
+            android:label="@string/about"/>
 
         <activity
             android:name=".activities.LicenseActivity"
-            android:label="@string/third_party_licences"
-            android:screenOrientation="portrait"/>
+            android:label="@string/third_party_licences"/>
 
         <receiver
             android:name=".MyWidgetProvider"
