--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.jakewharton:butterknife:8.0.1'
     compile 'com.github.yukuku:ambilwarna:2.0.1'
+    compile 'com.android.support:design:23.4.0'
 
     apt 'com.jakewharton:butterknife-compiler:8.0.1'
 }
