--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.0.1'
     compile 'com.github.yukuku:ambilwarna:2.0.1'
     compile 'com.android.support:design:23.4.0'
+    compile 'com.facebook.stetho:stetho:1.4.1'
 
     apt 'com.jakewharton:butterknife-compiler:8.0.1'
 }
