--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     compile 'com.github.yukuku:ambilwarna:2.0.1'
     compile 'com.android.support:design:23.4.0'
     compile 'com.facebook.stetho:stetho:1.4.1'
+    compile 'com.simplemobiletools:filepicker:1.5.1@aar'
+
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
 
