--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,18 +32,13 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:25.0.1'
-    compile 'com.github.yukuku:ambilwarna:2.0.1'
-    compile 'com.android.support:design:25.0.1'
+    compile 'com.simplemobiletools:commons:2.1.6'
     compile 'com.facebook.stetho:stetho:1.4.1'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.simplemobiletools:filepicker:1.6.1@aar'
-
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
 
 buildscript {
-    ext.kotlin_version = '1.0.5-2'
+    ext.kotlin_version = '1.0.3'
     repositories {
         mavenCentral()
     }
