moving a couple files in Helpers folder

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,7 @@
             android:parentActivityName=".activities.MainActivity"/>
 
         <receiver
-            android:name=".MyWidgetProvider"
+            android:name=".helpers.MyWidgetProvider"
             android:icon="@drawable/img_widget_preview">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
