--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,13 +32,13 @@ android {
 }
 
 dependencies {
-    compile 'com.simplemobiletools:commons:2.22.4'
+    compile 'com.simplemobiletools:commons:2.22.5'
     compile 'com.facebook.stetho:stetho:1.4.1'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
 
 buildscript {
-    ext.kotlin_version = '1.1.3'
+    ext.kotlin_version = '1.1.3-2'
     repositories {
         mavenCentral()
     }
