--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,7 @@ android {
         targetSdkVersion 27
         versionCode 38
         versionName "2.3.0"
+        setProperty("archivesBaseName", "notes")
     }
 
     signingConfigs {
