--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,6 +73,10 @@
             android:label="@string/settings"
             android:parentActivityName=".activities.MainActivity"/>
 
+        <service
+            android:name=".services.WidgetService"
+            android:permission="android.permission.BIND_REMOTEVIEWS"/>
+
         <receiver
             android:name=".helpers.MyWidgetProvider"
             android:icon="@drawable/img_widget_preview">
