--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ ext {
 dependencies {
     implementation 'com.simplemobiletools:commons:4.0.19'
     implementation 'com.facebook.stetho:stetho:1.5.0'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
 
     debugImplementation "com.squareup.leakcanary:leakcanary-android:$leakCanaryVersion"
     releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:$leakCanaryVersion"
