fix #120, make sure the proper note is shown at clicking a widget

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,10 +21,12 @@
 
         <activity
             android:name=".activities.SplashActivity"
+            android:launchMode="singleTask"
             android:theme="@style/SplashTheme"/>
 
         <activity
-            android:name=".activities.MainActivity">
+            android:name=".activities.MainActivity"
+            android:launchMode="singleTask">
 
             <intent-filter>
                 <action android:name="android.intent.action.SEND"/>
