--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
     buildToolsVersion "28.0.3"
 
     defaultConfig {
-        applicationId "com.simplemobiletools.notes"
+        applicationId "com.simplemobiletools.notes.pro"
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 54
