--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,7 +51,8 @@ android {
 }
 
 dependencies {
-    implementation 'com.simplemobiletools:commons:5.20.7'
+    implementation 'com.simplemobiletools:commons:5.20.9'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
 
     kapt 'androidx.room:room-compiler:2.2.2'
     implementation 'androidx.room:room-runtime:2.2.2'
