--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,8 +57,9 @@ android {
 }
 
 dependencies {
-    implementation 'com.simplemobiletools:commons:5.28.24'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta4'
+    implementation 'com.simplemobiletools:commons:5.30.12'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
+    implementation 'androidx.documentfile:documentfile:1.0.1'
 
     kapt 'androidx.room:room-compiler:2.2.5'
     implementation 'androidx.room:room-runtime:2.2.5'
