Use updated commons library

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,8 @@ android {
 }
 
 dependencies {
-    implementation 'com.github.SimpleMobileTools:Simple-Commons:c45f0d662a'
+//    implementation 'com.github.SimpleMobileTools:Simple-Commons:c45f0d662a'
+    implementation 'com.github.qwertyfinger:Simple-Commons:d61a1c0910'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     implementation 'androidx.documentfile:documentfile:1.0.1'
 
