Set correct commons dependency

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,8 +56,7 @@ android {
 }
 
 dependencies {
-//    implementation 'com.github.SimpleMobileTools:Simple-Commons:c45f0d662a'
-    implementation 'com.github.qwertyfinger:Simple-Commons:615349768d'
+    implementation 'com.github.SimpleMobileTools:Simple-Commons:79c625cbe0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     implementation 'androidx.documentfile:documentfile:1.0.1'
 
