--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,11 +22,13 @@
 
         <activity
             android:name=".activities.SplashActivity"
+            android:exported="false"
             android:launchMode="singleTask"
             android:theme="@style/SplashTheme" />
 
         <activity
             android:name=".activities.MainActivity"
+            android:exported="true"
             android:launchMode="singleTask">
 
             <intent-filter>
@@ -44,6 +46,7 @@
 
         <activity
             android:name=".activities.WidgetConfigureActivity"
+            android:exported="true"
             android:screenOrientation="portrait"
             android:theme="@style/MyWidgetConfigTheme">
             <intent-filter>
@@ -53,35 +56,48 @@
 
         <activity
             android:name="com.simplemobiletools.commons.activities.AboutActivity"
+            android:exported="false"
             android:label="@string/about"
             android:parentActivityName=".activities.MainActivity" />
 
         <activity
             android:name="com.simplemobiletools.commons.activities.CustomizationActivity"
+            android:exported="false"
             android:label="@string/customize_colors"
             android:parentActivityName=".activities.SettingsActivity" />
 
         <activity
             android:name="com.simplemobiletools.commons.activities.LicenseActivity"
+            android:exported="false"
             android:label="@string/third_party_licences"
             android:parentActivityName="com.simplemobiletools.commons.activities.AboutActivity" />
 
         <activity
             android:name="com.simplemobiletools.commons.activities.FAQActivity"
+            android:exported="false"
             android:label="@string/frequently_asked_questions"
             android:parentActivityName="com.simplemobiletools.commons.activities.AboutActivity" />
 
         <activity
             android:name=".activities.SettingsActivity"
+            android:exported="true"
             android:label="@string/settings"
-            android:parentActivityName=".activities.MainActivity" />
+            android:parentActivityName=".activities.MainActivity">
+
+            <intent-filter>
+                <action android:name="android.intent.action.APPLICATION_PREFERENCES" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
 
         <service
             android:name=".services.WidgetService"
+            android:exported="true"
             android:permission="android.permission.BIND_REMOTEVIEWS" />
 
         <receiver
             android:name=".helpers.MyWidgetProvider"
+            android:exported="true"
             android:icon="@drawable/img_widget_preview">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
@@ -95,6 +111,7 @@
         <activity-alias
             android:name=".activities.SplashActivity.Red"
             android:enabled="false"
+            android:exported="true"
             android:icon="@mipmap/ic_launcher_red"
             android:roundIcon="@mipmap/ic_launcher_red"
             android:targetActivity=".activities.SplashActivity">
@@ -108,6 +125,7 @@
         <activity-alias
             android:name=".activities.SplashActivity.Pink"
             android:enabled="false"
+            android:exported="true"
             android:icon="@mipmap/ic_launcher_pink"
             android:roundIcon="@mipmap/ic_launcher_pink"
             android:targetActivity=".activities.SplashActivity">
@@ -121,6 +139,7 @@
         <activity-alias
             android:name=".activities.SplashActivity.Purple"
             android:enabled="false"
+            android:exported="true"
             android:icon="@mipmap/ic_launcher_purple"
             android:roundIcon="@mipmap/ic_launcher_purple"
             android:targetActivity=".activities.SplashActivity">
@@ -134,6 +153,7 @@
         <activity-alias
             android:name=".activities.SplashActivity.Deep_purple"
             android:enabled="false"
+            android:exported="true"
             android:icon="@mipmap/ic_launcher_deep_purple"
             android:roundIcon="@mipmap/ic_launcher_deep_purple"
             android:targetActivity=".activities.SplashActivity">
@@ -147,6 +167,7 @@
         <activity-alias
             android:name=".activities.SplashActivity.Indigo"
             android:enabled="false"
+            android:exported="true"
             android:icon="@mipmap/ic_launcher_indigo"
             android:roundIcon="@mipmap/ic_launcher_indigo"
             android:targetActivity=".activities.SplashActivity">
@@ -160,6 +181,7 @@
         <activity-alias
             android:name=".activities.SplashActivity.Blue"
             android:enabled="false"
+            android:exported="true"
             android:icon="@mipmap/ic_launcher_blue"
             android:roundIcon="@mipmap/ic_launcher_blue"
             android:targetActivity=".activities.SplashActivity">
@@ -173,6 +195,7 @@
         <activity-alias
             android:name=".activities.SplashActivity.Light_blue"
             android:enabled="false"
+            android:exported="true"
             android:icon="@mipmap/ic_launcher_light_blue"
             android:roundIcon="@mipmap/ic_launcher_light_blue"
             android:targetActivity=".activities.SplashActivity">
@@ -186,6 +209,7 @@
         <activity-alias
             android:name=".activities.SplashActivity.Cyan"
             android:enabled="false"
+            android:exported="true"
             android:icon="@mipmap/ic_launcher_cyan"
             android:roundIcon="@mipmap/ic_launcher_cyan"
             android:targetActivity=".activities.SplashActivity">
@@ -199,6 +223,7 @@
         <activity-alias
             android:name=".activities.SplashActivity.Teal"
             android:enabled="false"
+            android:exported="true"
             android:icon="@mipmap/ic_launcher_teal"
             android:roundIcon="@mipmap/ic_launcher_teal"
             android:targetActivity=".activities.SplashActivity">
@@ -212,6 +237,7 @@
         <activity-alias
             android:name=".activities.SplashActivity.Green"
             android:enabled="false"
+            android:exported="true"
             android:icon="@mipmap/ic_launcher_green"
             android:roundIcon="@mipmap/ic_launcher_green"
             android:targetActivity=".activities.SplashActivity">
@@ -225,6 +251,7 @@
         <activity-alias
             android:name=".activities.SplashActivity.Light_green"
             android:enabled="false"
+            android:exported="true"
             android:icon="@mipmap/ic_launcher_light_green"
             android:roundIcon="@mipmap/ic_launcher_light_green"
             android:targetActivity=".activities.SplashActivity">
@@ -238,6 +265,7 @@
         <activity-alias
             android:name=".activities.SplashActivity.Lime"
             android:enabled="false"
+            android:exported="true"
             android:icon="@mipmap/ic_launcher_lime"
             android:roundIcon="@mipmap/ic_launcher_lime"
             android:targetActivity=".activities.SplashActivity">
@@ -251,6 +279,7 @@
         <activity-alias
             android:name=".activities.SplashActivity.Yellow"
             android:enabled="false"
+            android:exported="true"
             android:icon="@mipmap/ic_launcher_yellow"
             android:roundIcon="@mipmap/ic_launcher_yellow"
             android:targetActivity=".activities.SplashActivity">
@@ -264,6 +293,7 @@
         <activity-alias
             android:name=".activities.SplashActivity.Amber"
             android:enabled="false"
+            android:exported="true"
             android:icon="@mipmap/ic_launcher_amber"
             android:roundIcon="@mipmap/ic_launcher_amber"
             android:targetActivity=".activities.SplashActivity">
@@ -277,6 +307,7 @@
         <activity-alias
             android:name=".activities.SplashActivity.Orange"
             android:enabled="true"
+            android:exported="true"
             android:icon="@mipmap/ic_launcher"
             android:roundIcon="@mipmap/ic_launcher"
             android:targetActivity=".activities.SplashActivity">
@@ -289,6 +320,7 @@
         <activity-alias
             android:name=".activities.SplashActivity.Deep_orange"
             android:enabled="false"
+            android:exported="true"
             android:icon="@mipmap/ic_launcher_deep_orange"
             android:roundIcon="@mipmap/ic_launcher_deep_orange"
             android:targetActivity=".activities.SplashActivity">
@@ -302,6 +334,7 @@
         <activity-alias
             android:name=".activities.SplashActivity.Brown"
             android:enabled="false"
+            android:exported="true"
             android:icon="@mipmap/ic_launcher_brown"
             android:roundIcon="@mipmap/ic_launcher_brown"
             android:targetActivity=".activities.SplashActivity">
@@ -315,6 +348,7 @@
         <activity-alias
             android:name=".activities.SplashActivity.Blue_grey"
             android:enabled="false"
+            android:exported="true"
             android:icon="@mipmap/ic_launcher_blue_grey"
             android:roundIcon="@mipmap/ic_launcher_blue_grey"
             android:targetActivity=".activities.SplashActivity">
@@ -328,6 +362,7 @@
         <activity-alias
             android:name=".activities.SplashActivity.Grey_black"
             android:enabled="false"
+            android:exported="true"
             android:icon="@mipmap/ic_launcher_grey_black"
             android:roundIcon="@mipmap/ic_launcher_grey_black"
             android:targetActivity=".activities.SplashActivity">
