show a welcome dialog at moving from the free version

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,11 @@
         android:name="android.hardware.faketouch"
         android:required="false" />
 
+    <queries>
+        <package android:name="com.simplemobiletools.notes.debug" />
+        <package android:name="com.simplemobiletools.notes" />
+    </queries>
+
     <application
         android:name=".App"
         android:allowBackup="true"
